hphp/hack/test/typecheck/assign_array_get_pair_component_good.php.like_types.exp
File "assign_array_get_pair_component_good.php", line 5, characters 3-19:
You cannot mutate this (Typing[4011])
File "assign_array_get_pair_component_good.php", line 4, characters 15-41:
This is an object of type Pair<int, Map<string, int>>
