hphp/hack/test/typecheck/assign_array_get_pair_component_good.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function test(Pair<int, Map<string, int>> $p): void {
  $p[1]['foo'] = 42;
}
